--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
     />
 
     <title>Flip : 일상을 접고 특별한 하루를 펼치세요</title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+      Kakao.init('%REACT_APP_JAVASCRIPT_KEY%');
+    </script>
   </head>
   <body>
     <div id="root"></div>
