ADD: 상세페이지 레이아웃 구현중
ADD: 상세페이지 컴포넌트화 구현중

ADD: fetch 붙이고 부분 구현 중(WIP)

WIP: 리뷰  API 연결후 레이아웃 수정중

ADD: 지도 레이아웃 구현

ADD: 요청사항 반영

ADD: card component 추가 구현

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cff46475cbddf17a24ef6b89bf4ba1a7"
+    ></script>
     <title>Flip : 일상을 접고 특별한 하루를 펼치세요</title>
   </head>
   <body>
