WIP: 서브카테고리 필터링 구현중

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,18 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cff46475cbddf17a24ef6b89bf4ba1a7"
     ></script>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+
     <title>Flip : 일상을 접고 특별한 하루를 펼치세요</title>
   </head>
   <body>
     <div id="root"></div>
+    <div id="portal"></div>
   </body>
 </html>
