ImageUpload 기능구현 완료
fix: 메인 페이지 기능 병합 완료

발표 전 수정 완료

1차 리팩토링 완료

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       crossorigin="anonymous"
     />
 
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+      Kakao.init('d5419ee86956250fb34b1f32042f5a88');
+    </script>
     <title>Flip : 일상을 접고 특별한 하루를 펼치세요</title>
   </head>
   <body>
